templates/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: {NAMESPACE}
  labels:
    name: {NAMESPACE}
    app: {SERVICE_NAME}
